--- a/src/Arkivverket.Arkade.GUI/Resources/GUI.nb-NO.resx
+++ b/src/Arkivverket.Arkade.GUI/Resources/GUI.nb-NO.resx
@@ -112,57 +112,122 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AboutDialogCloseButtonText" xml:space="preserve">
-    <value>Close</value>
+  <data name="ArkadeDirectoryPathInfo" xml:space="preserve">
+    <value>Arbeidsområde - {0}</value>
   </data>
-  <data name="AboutDialogHeaderText" xml:space="preserve">
+  <data name="RestartArkadeDialogTitle" xml:space="preserve">
+    <value>Omstart av Arkade</value>
+  </data>
+  <data name="DetailedErrorMessageInfo" xml:space="preserve">
+    <value>Detaljer er skrevet til {0}</value>
+    <comment>{0} = filename</comment>
+  </data>
+  <data name="ErrorGeneral" xml:space="preserve">
+    <value>En feil har oppstått: {0}</value>
+  </data>
+  <data name="ErrorReadingArchive" xml:space="preserve">
+    <value>Feil ved innlesing av arkiv: {0}</value>
+  </data>
+  <data name="FileException_ErrorWithChosenFile" xml:space="preserve">
+    <value>Det oppstod en feil med den valgte filen</value>
+  </data>
+  <data name="FileException_GeneralError" xml:space="preserve">
+    <value>Det oppstod en generell feil med filvalget</value>
+  </data>
+  <data name="FileException_NoFileChosen" xml:space="preserve">
+    <value>Ingen fil ble valgt</value>
+  </data>
+  <data name="FileNotFoundMessage" xml:space="preserve">
+    <value>Fil ikke funnet: {0}</value>
+  </data>
+  <data name="FileSelectionWindowNameArchive" xml:space="preserve">
+    <value>Velg en arkivfil</value>
+  </data>
+  <data name="General_WindowTitle" xml:space="preserve">
     <value>Arkade 5</value>
   </data>
-  <data name="AboutDialogWindowName" xml:space="preserve">
-    <value>About Arkade 5</value>
+  <data name="NewProgramSessionButton" xml:space="preserve">
+    <value>Ny kjøring</value>
   </data>
-  <data name="ApacheV2_0Uri" xml:space="preserve">
-    <value>http://www.apache.org/licenses/LICENSE-2.0</value>
+  <data name="RestartArkadeForChangesToTakeEffectPrompt" xml:space="preserve">
+    <value>Arkade må startes på nytt for at endringene skal tre i kraft. Vil du starte Arkade på nytt nå?</value>
   </data>
-  <data name="ArkadeCopyrightInformationText" xml:space="preserve">
-    <value>Copyright © {0} Arkivverket. Licensed under</value>
-    <comment>{0} - årstall</comment>
+  <data name="SerilogFormatConfig" xml:space="preserve">
+    <value>{Timestamp:yyyy-MM-ddTHH:mm:ss.fff} [{Level}] {SourceContext} {Message}{NewLine}{Exception}</value>
   </data>
-  <data name="BundledSoftwareInformation_1" xml:space="preserve">
-    <value>Arkade 5 uses</value>
-    <comment>Første del av bundleinfo - ren tekst</comment>
+  <data name="ShowWebPageButtonText" xml:space="preserve">
+    <value>Hjemmeside</value>
   </data>
-  <data name="BundledSoftwareInformation_2" xml:space="preserve">
-    <value>Siegfried</value>
-    <comment>andre del - tekst til hyperlenke</comment>
+  <data name="TestName_CheckWellFormedXml" xml:space="preserve">
+    <value>Valider gyldig xml</value>
   </data>
-  <data name="BundledSoftwareInformation_3" xml:space="preserve">
-    <value>(Copyright © 2019 Richard Lehane), licensed under</value>
-    <comment>tredje del - ren tekst</comment>
+  <data name="TestName_NumberOfArchiveParts" xml:space="preserve">
+    <value>Finn antall arkivdeler</value>
   </data>
-  <data name="BundledSoftwareInformation_5" xml:space="preserve">
-    <value>to perform format analysis.</value>
-    <comment>femte del - ren tekst</comment>
+  <data name="TestName_NumberOfArchives" xml:space="preserve">
+    <value>Finn antall arkiv</value>
   </data>
-  <data name="GnuGpl3_0Uri" xml:space="preserve">
-    <value>https://www.gnu.org/licenses/gpl-3.0.en.html</value>
+  <data name="TestName_NumberOfClasses" xml:space="preserve">
+    <value>Finn antall klasser</value>
   </data>
-  <data name="LicenseApache2_0" xml:space="preserve">
-    <value>Apache License, Version 2.0</value>
-    <comment>fjerde del - tekst til hyperlenke</comment>
+  <data name="TestName_NumberOfClassesInMainClassificationSystemWithoutSubClassesorFolders" xml:space="preserve">
+    <value>Finn antall klasser i pri klassifikasjonssystem uten under klasser/mapper</value>
   </data>
-  <data name="LicenseGNU" xml:space="preserve">
-    <value>GNU GPL v3.0</value>
+  <data name="TestName_NumberOfClassificationSystems" xml:space="preserve">
+    <value>Finn antall klassifikasjonssystem</value>
   </data>
-  <data name="SiegfriedUri" xml:space="preserve">
-    <value>https://www.itforarchivists.com/siegfried/</value>
+  <data name="TestName_NumberOfFolders" xml:space="preserve">
+    <value>Finn antall mapper</value>
+  </data>
+  <data name="TestName_StatusOfArchiveParts" xml:space="preserve">
+    <value>Finn status på arkivdeler</value>
+  </data>
+  <data name="TestName_ValidateAddmlDataobjectsChecksums" xml:space="preserve">
+    <value>Valider gyldig sjekksummer</value>
+  </data>
+  <data name="TestName_ValidateXmlWithSchema" xml:space="preserve">
+    <value>Valider xml i henhold til skjema</value>
+  </data>
+  <data name="CloseButtonText" xml:space="preserve">
+    <value>Lukk</value>
+  </data>
+  <data name="RestartArkadeButtonText" xml:space="preserve">
+    <value>Start Arkade på nytt</value>
+  </data>
+  <data name="NewVersionMessage" xml:space="preserve">
+    <value>Ny versjon tilgjengelig</value>
+  </data>
+  <data name="UnsavedTestResultsOnExitWarning" xml:space="preserve">
+    <value>Hvis du avslutter nå vil resultater fra testkjøringen gå tapt. Ønsker du likevel å avslutte?</value>
+  </data>
+  <data name="ShowAboutDialogButtonText" xml:space="preserve">
+    <value>Om Arkade 5</value>
+  </data>
+  <data name="ShowToolsDialogButtonText" xml:space="preserve">
+    <value>Verktøy</value>
+  </data>
+  <data name="ShowSettingsDialogButtonText" xml:space="preserve">
+    <value>Innstillinger</value>
+  </data>
+  <data name="ApplicationName" xml:space="preserve">
+    <value>Arkade 5</value>
+  </data>
+  <data name="DetailedErrorMessageFileName" xml:space="preserve">
+    <value>arkade-error-{0}.log</value>
   </data>
   <data name="VersionText" xml:space="preserve">
-    <value>Version: </value>
+    <value>Versjon </value>
+  </data>
+  <data name="RestartFailedMessageBoxText" xml:space="preserve">
+    <value>Klarte ikke å restarte Arkade.
+Vennligst start Arkade manuelt etter avslutning.</value>
+  </data>
+  <data name="RestartFailedMessageBoxTitle" xml:space="preserve">
+    <value>Automatisk omstart feilet</value>
   </data>
 </root>
