--- a/src/Arkivverket.Arkade.GUI/Resources/TestRunnerGUI.resx
+++ b/src/Arkivverket.Arkade.GUI/Resources/TestRunnerGUI.resx
@@ -112,57 +112,86 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AboutDialogCloseButtonText" xml:space="preserve">
-    <value>Close</value>
+  <data name="ArchiveNotTestable" xml:space="preserve">
+    <value>Archive is not testable: Did not find a valid specification file.
+(See log for details {0}).
+Package creation can still be executed.</value>
   </data>
-  <data name="AboutDialogHeaderText" xml:space="preserve">
-    <value>Arkade 5</value>
+  <data name="ArchiveTestability" xml:space="preserve">
+    <value>Testability</value>
   </data>
-  <data name="AboutDialogWindowName" xml:space="preserve">
-    <value>About Arkade 5</value>
+  <data name="FinishedOperationMessage" xml:space="preserve">
+    <value>Testing completed</value>
   </data>
-  <data name="ApacheV2_0Uri" xml:space="preserve">
-    <value>http://www.apache.org/licenses/LICENSE-2.0</value>
+  <data name="FinishedWithError" xml:space="preserve">
+    <value>Error while testing</value>
   </data>
-  <data name="ArkadeCopyrightInformationText" xml:space="preserve">
-    <value>Copyright © {0} Arkivverket. Licensed under</value>
-    <comment>{0} - årstall</comment>
+  <data name="MessageLabelError" xml:space="preserve">
+    <value>Error</value>
   </data>
-  <data name="BundledSoftwareInformation_1" xml:space="preserve">
-    <value>Arkade 5 uses</value>
-    <comment>Første del av bundleinfo - ren tekst</comment>
+  <data name="MessageLabelSuccess" xml:space="preserve">
+    <value>Ok</value>
   </data>
-  <data name="BundledSoftwareInformation_2" xml:space="preserve">
-    <value>Siegfried</value>
-    <comment>andre del - tekst til hyperlenke</comment>
+  <data name="MessageLabelWarning" xml:space="preserve">
+    <value>Warning</value>
   </data>
-  <data name="BundledSoftwareInformation_3" xml:space="preserve">
-    <value>(Copyright © 2019 Richard Lehane), licensed under</value>
-    <comment>tredje del - ren tekst</comment>
+  <data name="ErrorReadingArchive" xml:space="preserve">
+    <value>Error while reading archive: {0}</value>
   </data>
-  <data name="BundledSoftwareInformation_5" xml:space="preserve">
-    <value>to perform format analysis.</value>
-    <comment>femte del - ren tekst</comment>
+  <data name="FileNotFoundMessage" xml:space="preserve">
+    <value>File not found: {0}</value>
   </data>
-  <data name="GnuGpl3_0Uri" xml:space="preserve">
-    <value>https://www.gnu.org/licenses/gpl-3.0.en.html</value>
+  <data name="DetailedErrorMessageInfo" xml:space="preserve">
+    <value>Details are written to {0}</value>
   </data>
-  <data name="LicenseApache2_0" xml:space="preserve">
-    <value>Apache License, Version 2.0</value>
-    <comment>fjerde del - tekst til hyperlenke</comment>
+  <data name="CreatePackageButtonText" xml:space="preserve">
+    <value>Create package</value>
   </data>
-  <data name="LicenseGNU" xml:space="preserve">
-    <value>GNU GPL v3.0</value>
+  <data name="NewProgramSessionButtonText" xml:space="preserve">
+    <value>New session</value>
   </data>
-  <data name="SiegfriedUri" xml:space="preserve">
-    <value>https://www.itforarchivists.com/siegfried/</value>
+  <data name="Title" xml:space="preserve">
+    <value>Test archive extraction</value>
   </data>
-  <data name="VersionText" xml:space="preserve">
-    <value>Version: </value>
+  <data name="HeaderFilePath" xml:space="preserve">
+    <value>Path to file:</value>
+  </data>
+  <data name="HeaderUUID" xml:space="preserve">
+    <value>UUID:</value>
+  </data>
+  <data name="HeaderArchiveType" xml:space="preserve">
+    <value>Archive type:</value>
+  </data>
+  <data name="HeaderProcessingFile" xml:space="preserve">
+    <value>Processing file:</value>
+  </data>
+  <data name="HeaderNumberOfProcessedFiles" xml:space="preserve">
+    <value>Number of files processed:</value>
+  </data>
+  <data name="HeaderNumberofProcessedPosts" xml:space="preserve">
+    <value>Number of posts processed:</value>
+  </data>
+  <data name="HeaderNumberOfProcessedXmlElements" xml:space="preserve">
+    <value>Number of XML-elements processed:</value>
+  </data>
+  <data name="TestSelectionHeader" xml:space="preserve">
+    <value>Tests (expand for selection)</value>
+  </data>
+  <data name="TestSelectionChooseAllOrNoneCheckBoxText" xml:space="preserve">
+    <value>Choose all/none</value>
+  </data>
+  <data name="StartTestingButtonText" xml:space="preserve">
+    <value>Start testing</value>
+  </data>
+  <data name="ShowTestReportButtonText" xml:space="preserve">
+    <value>Show report</value>
+  </data>
+  <data name="TestMessagesHeading" xml:space="preserve">
+    <value>Messages:</value>
   </data>
 </root>
