--- a/src/Arkivverket.Arkade.GUI/Resources/ToolsGUI.nb-NO.resx
+++ b/src/Arkivverket.Arkade.GUI/Resources/ToolsGUI.nb-NO.resx
@@ -117,52 +117,35 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AboutDialogCloseButtonText" xml:space="preserve">
-    <value>Close</value>
+  <data name="CloseDialogButtonText" xml:space="preserve">
+    <value>Lukk</value>
   </data>
-  <data name="AboutDialogHeaderText" xml:space="preserve">
-    <value>Arkade 5</value>
+  <data name="FormatCheckActionChooseOutputDirectory" xml:space="preserve">
+    <value>save format analysis result</value>
   </data>
-  <data name="AboutDialogWindowName" xml:space="preserve">
-    <value>About Arkade 5</value>
+  <data name="FormatCheckActionChooseTargetDirectory" xml:space="preserve">
+    <value>format analysis</value>
   </data>
-  <data name="ApacheV2_0Uri" xml:space="preserve">
-    <value>http://www.apache.org/licenses/LICENSE-2.0</value>
+  <data name="FormatCheckChooseTargetDirectoryButtonText" xml:space="preserve">
+    <value>Velg katalog ...</value>
   </data>
-  <data name="ArkadeCopyrightInformationText" xml:space="preserve">
-    <value>Copyright © {0} Arkivverket. Licensed under</value>
-    <comment>{0} - årstall</comment>
+  <data name="FormatCheckCompletedMessage" xml:space="preserve">
+    <value>Formatanalyse er utført!
+Resultat lagret i:</value>
   </data>
-  <data name="BundledSoftwareInformation_1" xml:space="preserve">
-    <value>Arkade 5 uses</value>
-    <comment>Første del av bundleinfo - ren tekst</comment>
+  <data name="FormatCheckHeading" xml:space="preserve">
+    <value>PRONOM filformat-analyse</value>
   </data>
-  <data name="BundledSoftwareInformation_2" xml:space="preserve">
-    <value>Siegfried</value>
-    <comment>andre del - tekst til hyperlenke</comment>
+  <data name="FormatCheckOngoing" xml:space="preserve">
+    <value>Utfører formatanalyse ...</value>
   </data>
-  <data name="BundledSoftwareInformation_3" xml:space="preserve">
-    <value>(Copyright © 2019 Richard Lehane), licensed under</value>
-    <comment>tredje del - ren tekst</comment>
+  <data name="FormatCheckOutputDirectoryPickerTitle" xml:space="preserve">
+    <value>Velg plassering for lagring av resultat</value>
   </data>
-  <data name="BundledSoftwareInformation_5" xml:space="preserve">
-    <value>to perform format analysis.</value>
-    <comment>femte del - ren tekst</comment>
+  <data name="FormatCheckRunButtonText" xml:space="preserve">
+    <value>Kjør</value>
   </data>
-  <data name="GnuGpl3_0Uri" xml:space="preserve">
-    <value>https://www.gnu.org/licenses/gpl-3.0.en.html</value>
-  </data>
-  <data name="LicenseApache2_0" xml:space="preserve">
-    <value>Apache License, Version 2.0</value>
-    <comment>fjerde del - tekst til hyperlenke</comment>
-  </data>
-  <data name="LicenseGNU" xml:space="preserve">
-    <value>GNU GPL v3.0</value>
-  </data>
-  <data name="SiegfriedUri" xml:space="preserve">
-    <value>https://www.itforarchivists.com/siegfried/</value>
-  </data>
-  <data name="VersionText" xml:space="preserve">
-    <value>Version: </value>
+  <data name="ToolsDialogTitle" xml:space="preserve">
+    <value>Verktøy</value>
   </data>
 </root>
