--- a/src/Arkivverket.Arkade.Core/Resources/AddmlMessages.nb-NO.resx
+++ b/src/Arkivverket.Arkade.Core/Resources/AddmlMessages.nb-NO.resx
@@ -156,4 +156,19 @@
   <data name="UnknownAddmlProcess" xml:space="preserve">
     <value>Ukjent ADDML-prosess: {0}</value>
   </data>
+  <data name="NumberOfRecordsWithFieldDelimiterErrorIdentifier" xml:space="preserve">
+    <value>ADDML-poster med feil antall felt i filen {0}</value>
+  </data>
+  <data name="FailedRecordErrorMessage" xml:space="preserve">
+    <value>{0} Felttekst: {1}</value>
+  </data>
+  <data name="TotalAmountText" xml:space="preserve">
+    <value>Totalt antall: {0}</value>
+  </data>
+  <data name="FailedRecordErrorIdentifier" xml:space="preserve">
+    <value>ADDML-post med feil antall felt i fil {0}, post nummer {1}, feil nummer {2}</value>
+  </data>
+  <data name="TotalAmountOfRecordsWithFieldDelimiterErrorResultText" xml:space="preserve">
+    <value>Filens totale antall poster med feil antall felt: {0}</value>
+  </data>
 </root>
