Move norwegian text to resource files
ARKADE-471

--- a/src/Arkivverket.Arkade.GUI/Resources/CreatePackageGUI.nb-NO.resx
+++ b/src/Arkivverket.Arkade.GUI/Resources/CreatePackageGUI.nb-NO.resx
@@ -132,4 +132,7 @@
   <data name="WindowTitle" xml:space="preserve">
     <value>Registrer metadata og opprett pakke</value>
   </data>
+  <data name="IPandMetadataSuccessfullyCreatedStatusMessage" xml:space="preserve">
+    <value>IP og metadata lagret i </value>
+  </data>
 </root>
