--- a/src/Arkivverket.Arkade.GUI/Resources/GUI.resx
+++ b/src/Arkivverket.Arkade.GUI/Resources/GUI.resx
@@ -231,4 +231,7 @@ Please manually start Arkade after shutdown.</value>
   <data name="RestartFailedMessageBoxTitle" xml:space="preserve">
     <value>Automatic restart failed</value>
   </data>
+  <data name="UiAndOutputLanguagesIsDifferentWarningMessage" xml:space="preserve">
+    <value>Language for files produced by Arkade 5 is not English</value>
+  </data>
 </root>
