--- a/src/Arkivverket.Arkade.GUI/Resources/GUI.nb-NO.resx
+++ b/src/Arkivverket.Arkade.GUI/Resources/GUI.nb-NO.resx
@@ -230,4 +230,7 @@ Vennligst start Arkade manuelt etter avslutning.</value>
   <data name="RestartFailedMessageBoxTitle" xml:space="preserve">
     <value>Automatisk omstart feilet</value>
   </data>
+  <data name="UiAndOutputLanguagesIsDifferentWarningMessage" xml:space="preserve">
+    <value>Språk for filer som produseres av Arkade er ikke norsk bokmål</value>
+  </data>
 </root>
