WIP: output file names, cli parameter update, ...
ARKADE-471

--- a/src/Arkivverket.Arkade.Core/Resources/OutputFileNames.resx
+++ b/src/Arkivverket.Arkade.Core/Resources/OutputFileNames.resx
@@ -117,23 +117,23 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="DirectoryNameResultOutputContainer" xml:space="preserve">
+  <data name="ResultOutputDirectory" xml:space="preserve">
     <value>Arkaderesults</value>
   </data>
-  <data name="FileFormatInfoFileName" xml:space="preserve">
+  <data name="FileFormatInfoFile" xml:space="preserve">
     <value>fileformatinfo.csv</value>
   </data>
-  <data name="FileFormatInfoStatisticsFileName" xml:space="preserve">
+  <data name="FileFormatInfoStatisticsFile" xml:space="preserve">
     <value>fileformatinfo-statistics.csv</value>
   </data>
-  <data name="MetadataFileName" xml:space="preserve">
+  <data name="MetadataFile" xml:space="preserve">
     <value>arkade-ip-metadata.json</value>
   </data>
-  <data name="Noark5TestListFileName" xml:space="preserve">
-    <value>noark5-testlist.txt</value>
+  <data name="Noark5TestSelectionFile" xml:space="preserve">
+    <value>noark5-testselection.txt</value>
   </data>
-  <data name="TestReportFileName" xml:space="preserve">
-    <value>Arkadereport-{0}.{1}</value>
-    <comment>{0} = uuid, {1} = extension</comment>
+  <data name="TestReportFile" xml:space="preserve">
+    <value>Arkadereport-{0}.html</value>
+    <comment>{0} = uuid</comment>
   </data>
 </root>
