--- a/src/Arkivverket.Arkade.GUI/Resources/AboutGUI.resx
+++ b/src/Arkivverket.Arkade.GUI/Resources/AboutGUI.resx
@@ -131,30 +131,30 @@
   </data>
   <data name="ArkadeCopyrightInformationText" xml:space="preserve">
     <value>Copyright © {0} Arkivverket. Licensed under</value>
-    <comment>{0} - årstall</comment>
+    <comment>{0} = Year</comment>
   </data>
   <data name="BundledSoftwareInformation_1" xml:space="preserve">
     <value>Arkade 5 uses</value>
-    <comment>Første del av bundleinfo - ren tekst</comment>
+    <comment>1st part - plain text</comment>
   </data>
   <data name="BundledSoftwareInformation_2" xml:space="preserve">
     <value>Siegfried</value>
-    <comment>andre del - tekst til hyperlenke</comment>
+    <comment>2nd part - hyperlink text</comment>
   </data>
   <data name="BundledSoftwareInformation_3" xml:space="preserve">
     <value>(Copyright © 2019 Richard Lehane), licensed under</value>
-    <comment>tredje del - ren tekst</comment>
+    <comment>3rd part - plain text</comment>
   </data>
   <data name="BundledSoftwareInformation_5" xml:space="preserve">
     <value>to perform format analysis.</value>
-    <comment>femte del - ren tekst</comment>
+    <comment>5th part - plain text</comment>
   </data>
   <data name="GnuGpl3_0Uri" xml:space="preserve">
     <value>https://www.gnu.org/licenses/gpl-3.0.en.html</value>
   </data>
   <data name="LicenseApache2_0" xml:space="preserve">
     <value>Apache License, Version 2.0</value>
-    <comment>fjerde del - tekst til hyperlenke</comment>
+    <comment>4th part - hyperlink text</comment>
   </data>
   <data name="LicenseGNU" xml:space="preserve">
     <value>GNU GPL v3.0</value>
