--- a/src/Arkivverket.Arkade.CLI/OutputStrings.resx
+++ b/src/Arkivverket.Arkade.CLI/OutputStrings.resx
@@ -118,12 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Noark5TestSelectionFileDescription" xml:space="preserve">
-    <value>Oppgi test-ID (N5.XX) i starten av en egen linje for hver test som skal utføres
-{0} Tester kan utelates ved å sette tegnet {0} først på linjen</value>
-    <comment>{0} = kommentarsymbol</comment>
+    <value>Enter the test ID (N5.XX) at the beginning of a separate line for each test to be performed
+{0} Tests can be omitted by putting the {0} character first on the line</value>
+    <comment>{0} = Comment symbol</comment>
   </data>
   <data name="Noark5TestSelectionFileHeading" xml:space="preserve">
-    <value>NOARK5-TESTER SOM SKAL UTFØRES AV ARKADE</value>
+    <value>NOARK5 TESTS TO BE PERFORMED BY ARKADE</value>
   </data>
   <data name="SystemLogOutputTemplateForConsole" xml:space="preserve">
     <value>[{Level}] {Message}{NewLine}{Exception}</value>
@@ -132,7 +132,7 @@
     <value>{Timestamp:yyyy-MM-ddTHH:mm:ss.fff} [{Level}] {SourceContext} {Message}{NewLine}{Exception}</value>
   </data>
   <data name="TestReportFileName" xml:space="preserve">
-    <value>Arkaderapport-{0}.html</value>
+    <value>Arkadereport-{0}.html</value>
     <comment>{0} = Archive.Uuid</comment>
   </data>
 </root>
